--- a/src/blocks/header/header.css
+++ b/src/blocks/header/header.css
@@ -4,10 +4,10 @@
 @import url(./__text/header__text.css);
 
 .header {
-  width: 100%;
+  width: 1440px;
   height: 80px;
-  margin: 0;
+  margin: 0 auto;
   padding: 0;
-  background: rgba(196, 196, 196, 0.01);
+  background: rgba(196, 196, 196, 1);
   box-shadow: inset 0px -1px 0px rgba(255, 255, 255, 0.2);
 }
