--- a/src/blocks/searchform/__title/searchform__title.css
+++ b/src/blocks/searchform/__title/searchform__title.css
@@ -1,4 +1,10 @@
 .searchform__title {
-  margin: 0;
+  margin: 0 0 32px 0;
   padding: 0;
+  font-family: "Roboto Slab", Arial, sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 60px;
+  line-height: 64px;
+  color: #FFF;
 }
