--- a/src/blocks/searchform/__form/searchform__form.css
+++ b/src/blocks/searchform/__form/searchform__form.css
@@ -1,5 +1,10 @@
 .searchform__form {
   position: relative;
-  margin: 0;
-  padding: 0;
+  width: 100%;
+  height: 64px;
+  background: #FFFFFF;
+  border: 1px solid #D1D2D6;
+  box-sizing: border-box;
+  backdrop-filter: blur(8px);
+  border-radius: 100px;
 }
