--- a/src/blocks/searchform/__input/searchform__input.css
+++ b/src/blocks/searchform/__input/searchform__input.css
@@ -1,14 +1,16 @@
 .searchform__input {
+  position: relative;
   margin: 0;
   padding: 0;
-  width: 100%;
+  width: 70%;
   height: 64px;
   background: #FFF;
-  border: 1px solid #fff;
+  border: none;
   box-sizing: border-box;
   -webkit-backdrop-filter: blur(8px);
   backdrop-filter: blur(8px);
-  border-radius: 100px;
+  border-top-left-radius: 100px;
+  border-bottom-left-radius: 100px;
   outline: 0;
   padding-left: 24px;
   outline-offset: 0;
