--- a/src/blocks/searchform/searchform.css
+++ b/src/blocks/searchform/searchform.css
@@ -14,7 +14,7 @@
 .searchform, .header {
   background-image: url('../../images/main_theme.png');
   background-repeat: no-repeat;
-  background-size: 100% 100%;
+  background-size: cover;
   background-position: center;
   background-attachment: fixed;
 }
