--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,4 @@
 @import url(./components/Navigation/Navigation.css);
 @import url(./components/Main/Main.css);
 @import url(./components/SearchForm/SearchForm.css);
+@import url(./components/Preloader/Preloader.css);
