--- a/src/index.css
+++ b/src/index.css
@@ -6,3 +6,4 @@
 @import url(./components/Main/Main.css);
 @import url(./components/SearchForm/SearchForm.css);
 @import url(./components/Preloader/Preloader.css);
+@import url(./components/PageNotFound/PageNotFound.css);
