--- a/src/index.css
+++ b/src/index.css
@@ -7,3 +7,4 @@
 @import url(./components/SearchForm/SearchForm.css);
 @import url(./components/Preloader/Preloader.css);
 @import url(./components/PageNotFound/PageNotFound.css);
+@import url(./components//SearchingResults/SearchingResults.css);
