Searching Results section add

--- a/src/blocks/searchform/__search/searchform__search.css
+++ b/src/blocks/searchform/__search/searchform__search.css
@@ -9,7 +9,7 @@
   height: 64px;
   border: none;
   background: #2F71E5;
-  box-shadow: -5px 5px 10px rgba(14, 26, 57, 0.2);
+  box-shadow: -5px 0 10px rgba(14, 26, 57, 0.2);
   border-radius: 100px;
 
   font-family: "Roboto", Arial, sans-serif;
@@ -25,6 +25,7 @@
 .searchform__search:hover {
   cursor: pointer;
   background: #347EFF;
+  box-shadow: -5px 0 10px rgba(14, 26, 57, 0.3);
 }
 
 .searchform__search:active {
