--- a/src/blocks/searching-results/__button/searching-results__button.css
+++ b/src/blocks/searching-results/__button/searching-results__button.css
@@ -17,4 +17,12 @@
   font-size: 18px;
   line-height: 24px;
   color: #1A1B22;
+
+  transition: all .3s ease;
+}
+
+.searching-results__button:hover {
+  cursor: pointer;
+  opacity: 0.9;
+  box-shadow: 0 5px 10px rgba(14, 26, 57, 0.2);
 }
