--- a/src/index.css
+++ b/src/index.css
@@ -8,3 +8,4 @@
 @import url(./components/Preloader/Preloader.css);
 @import url(./components/PageNotFound/PageNotFound.css);
 @import url(./components//SearchingResults/SearchingResults.css);
+@import url(./components/NewsCard/NewsCard.css);
