Add articles to page

--- a/src/blocks/article-element/article-element.css
+++ b/src/blocks/article-element/article-element.css
@@ -18,8 +18,5 @@
   background: #FFF;
   border-radius: 16px;
   position: relative;
+  padding-bottom: 24px;
 }
-
-/* .article-element__loggedout:hover .article-element__attantion {
-  color: red;
-} */
