--- a/src/blocks/article-element/__source/article-element__source.css
+++ b/src/blocks/article-element/__source/article-element__source.css
@@ -1,7 +1,7 @@
 .article-element__source {
-  margin: 0 0 24px;
   padding: 0;
 
+  text-decoration: none;
   font-family: "Roboto Slab", Arial, sans-serif;
   font-style: normal;
   font-weight: bold;
@@ -10,4 +10,10 @@
   letter-spacing: 0.4px;
   text-transform: uppercase;
   color: #B6BCBF;
+  cursor: pointer;
+  transition: all .3s ease;
+}
+
+.article-element__source:hover {
+  color: #a0a5a8;
 }
