--- a/src/blocks/searching-results/__elements/searching-results__elements.css
+++ b/src/blocks/searching-results/__elements/searching-results__elements.css
@@ -1,6 +1,11 @@
 .searching-results__elements {
   width: 100%;
-  display: flex;
+  /* display: flex; */
   margin: 0 0 64px;
   padding: 0;
+  /* flex-wrap: wrap; */
+  display: grid;
+    grid-template-columns: repeat(auto-fill, 400px);
+    grid-row-gap: 16px;
+    grid-column-gap: 16px;
 }
