--- a/src/blocks/article-element/__text/article-element__text.css
+++ b/src/blocks/article-element/__text/article-element__text.css
@@ -1,7 +1,7 @@
 .article-element__text {
-  margin: 0 0 18px;
+  margin: 0 0 24px;
   padding: 0;
-
+  text-overflow: ellipsis;
   font-family: "Roboto", Arial, sans-serif;
   font-style: normal;
   font-weight: normal;
