--- a/src/blocks/article-element/__title/article-element__title.css
+++ b/src/blocks/article-element/__title/article-element__title.css
@@ -1,7 +1,7 @@
 .article-element__title {
   margin: 0 0 16px;
   padding: 0;
-
+  max-height: 90px;
   font-family: "Roboto Slab", Arial, sans-serif;
   font-style: normal;
   font-weight: normal;
