--- a/src/index.css
+++ b/src/index.css
@@ -9,3 +9,4 @@
 @import url(./components/PageNotFound/PageNotFound.css);
 @import url(./components//SearchingResults/SearchingResults.css);
 @import url(./components/NewsCard/NewsCard.css);
+@import url(./components/About/About.css);
