--- a/src/index.css
+++ b/src/index.css
@@ -10,3 +10,4 @@
 @import url(./components//SearchingResults/SearchingResults.css);
 @import url(./components/NewsCard/NewsCard.css);
 @import url(./components/About/About.css);
+@import url(./components/Footer/Footer.css);
