--- a/src/blocks/footer/__link/footer__link.css
+++ b/src/blocks/footer/__link/footer__link.css
@@ -10,4 +10,10 @@
   line-height: 24px;
   text-align: center;
   color: #1A1B22;
+  transition: all .3s ease;
+}
+
+.footer__link:hover {
+  cursor: pointer;
+  opacity: .8;
 }
