--- a/src/index.css
+++ b/src/index.css
@@ -10,4 +10,5 @@
 @import url(./components//SearchingResults/SearchingResults.css);
 @import url(./components/NewsCard/NewsCard.css);
 @import url(./components/About/About.css);
+@import url(./components/Register/Register.css);
 @import url(./components/Footer/Footer.css);
