--- a/src/blocks/register-container/__button/register-container__button.css
+++ b/src/blocks/register-container/__button/register-container__button.css
@@ -14,4 +14,16 @@
   font-size: 18px;
   line-height: 24px;
   color: #FFFFFF;
+  outline: none;
+  transition: all .3s ease;
+}
+
+.register-container__button:hover {
+  cursor: pointer;
+  background: #347EFF;
+  box-shadow: 0px 5px 15px rgba(14, 26, 57, 0.3);
+}
+
+.register-container__button:active {
+  background: #2A65CC;
 }
