register-container__input-error_active

--- a/src/blocks/register-container/__input-error/register-container__input-error.css
+++ b/src/blocks/register-container/__input-error/register-container__input-error.css
@@ -1,11 +1,13 @@
 .register-container__input-error {
   margin: 0;
   padding: 0;
+  min-height: 14px;
   font-family: "Inter", Arial, sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 12px;
   line-height: 15px;
-
+  visibility: hidden;
   color: #FF0000;
+  transition: visibility .3s ease;
 }
