--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,7 @@
 @import url(./components/Preloader/Preloader.css);
 @import url(./components/PageNotFound/PageNotFound.css);
 @import url(./components//SearchingResults/SearchingResults.css);
+@import url(./components/SavedNewsHeader/SavedNewsHeader.css);
 @import url(./components/NewsCard/NewsCard.css);
 @import url(./components/About/About.css);
 @import url(./components/Footer/Footer.css);
