--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,7 @@
 @import url(./components/PageNotFound/PageNotFound.css);
 @import url(./components//SearchingResults/SearchingResults.css);
 @import url(./components/SavedNewsHeader/SavedNewsHeader.css);
+@import url(./components/NewsCardList/NewsCardList.css);
 @import url(./components/NewsCard/NewsCard.css);
 @import url(./components/About/About.css);
 @import url(./components/Footer/Footer.css);
