--- a/src/blocks/article-list/article-list.css
+++ b/src/blocks/article-list/article-list.css
@@ -1,1 +1,8 @@
 @import url(./__item/article-list__item.css);
+
+.article-list {
+  margin: 0;
+  padding: 60px 0;
+  max-width: 100%;
+  background-color: #F5F6F7;
+}
