--- a/src/blocks/header/header.css
+++ b/src/blocks/header/header.css
@@ -6,7 +6,7 @@
 @import url(./_theme-dark/header_theme-dark.css);
 
 .header {
-  width: 1440px;
+  max-width: 1440px;
   height: 80px;
   margin: 0 auto;
   box-shadow: inset 0px -1px 0px rgba(255, 255, 255, 0.2);
