--- a/src/blocks/header/__info/header__info.css
+++ b/src/blocks/header/__info/header__info.css
@@ -1,8 +1,14 @@
 .header__info {
-  width: 1227px;
+  max-width: 85%;
   height: 80px;
   margin: 0 auto;
   display: flex;
   align-items: center;
   justify-content: space-between;
+}
+
+@media screen and (max-width: 1024px) and (min-width: 768px) {
+  .header__info {
+    height: 66px;
+  }
 }
