--- a/src/blocks/navigation/__link/navigation__link.css
+++ b/src/blocks/navigation/__link/navigation__link.css
@@ -9,3 +9,9 @@
   line-height: 24px;
   color: #FFFFFF;
 }
+
+@media screen and (max-width: 1024px) and (min-width: 768px) {
+  .navigation__link {
+    font-size: 16px;
+  }
+}
