--- a/src/blocks/searchform/__info/searchform__info.css
+++ b/src/blocks/searchform/__info/searchform__info.css
@@ -3,3 +3,10 @@
   padding: 80px 0;
   max-width: 42%;
 }
+
+@media screen and (max-width: 1024px) and (min-width: 768px) {
+  .searchform__info {
+    max-width: 59%;
+    padding: 38px 0 48px;
+  }
+}
