--- a/src/blocks/searchform/__input/searchform__input.css
+++ b/src/blocks/searchform/__input/searchform__input.css
@@ -3,7 +3,7 @@
   margin: 0;
   padding: 0;
   width: 70%;
-  height: 64px;
+  height: inherit;
   background: #FFF;
   border: none;
   box-sizing: border-box;
