--- a/src/blocks/searchform/__search/searchform__search.css
+++ b/src/blocks/searchform/__search/searchform__search.css
@@ -6,7 +6,7 @@
   padding: 0;
   margin: 0;
   width: 168px;
-  height: 64px;
+  height: inherit;
   border: none;
   background: #2F71E5;
   box-shadow: -5px 0 10px rgba(14, 26, 57, 0.2);
