--- a/src/blocks/searchform/__text/searchform__text.css
+++ b/src/blocks/searchform/__text/searchform__text.css
@@ -9,3 +9,9 @@
   line-height: 24px;
   color: #FFF;
 }
+
+@media screen and (max-width: 1024px) and (min-width: 768px) {
+  .searchform__text {
+    margin: 0 0 48px 0;
+  }
+}
