--- a/src/blocks/searchform/__title/searchform__title.css
+++ b/src/blocks/searchform/__title/searchform__title.css
@@ -8,3 +8,12 @@
   line-height: 64px;
   color: #FFF;
 }
+
+@media screen and (max-width: 1024px) and (min-width: 768px) {
+  .searchform__title {
+    margin: 0 0 16px 0;
+    max-width: 385px;
+    font-size: 36px;
+    line-height: 40px;
+  }
+}
