--- a/src/blocks/searching-results/__title/searching-results__title.css
+++ b/src/blocks/searching-results/__title/searching-results__title.css
@@ -8,3 +8,11 @@
   line-height: 46px;
   color: #1A1B22;
 }
+
+@media screen and (max-width: 1024px) and (min-width: 768px) {
+  .searching-results__title {
+    margin: 0 0 32px;
+    font-size: 30px;
+    line-height: 34px;
+  }
+}
