--- a/src/blocks/searching-results/searching-results.css
+++ b/src/blocks/searching-results/searching-results.css
@@ -4,6 +4,13 @@
 
 .searching-results {
   padding: 80px 0;
-  max-width: 1232px;
+  max-width: 85%;
   margin: 0 auto;
+}
+
+@media screen and (max-width: 1024px) and (min-width: 768px) {
+  .searching-results {
+    max-width: 89%;
+    padding: 40px 0 57px;
+  }
 }
