--- a/src/blocks/article-element/__cover/article-element__cover.css
+++ b/src/blocks/article-element/__cover/article-element__cover.css
@@ -1,6 +1,13 @@
 .article-element__cover {
-  width: 352px;
+  max-width: 352px;
   height: 230px;
-  margin: 0 auto 8px;
+  margin: 0 auto;
   text-align: left;
+}
+
+@media screen and (max-width: 1268px) and (min-width: 768px) {
+  .article-element__cover {
+    max-width: 192px;
+    height: 200px;
+  }
 }
