--- a/src/blocks/article-element/__text/article-element__text.css
+++ b/src/blocks/article-element/__text/article-element__text.css
@@ -1,6 +1,8 @@
 .article-element__text {
-  margin: 0 0 24px;
+  margin: 0;
   padding: 0;
+  max-height: 110px;
+  overflow: hidden;
   text-overflow: ellipsis;
   font-family: "Roboto", Arial, sans-serif;
   font-style: normal;
@@ -8,4 +10,10 @@
   font-size: 16px;
   line-height: 22px;
   color: #1A1B22;
+}
+
+@media screen and (max-width: 1268px) and (min-width: 768px) {
+  .article-element__text {
+    max-height: 88px;
+  }
 }
