--- a/src/blocks/searching-results/__elements/searching-results__elements.css
+++ b/src/blocks/searching-results/__elements/searching-results__elements.css
@@ -10,9 +10,10 @@
   overflow: hidden;
 }
 
-@media screen and (max-width: 1024px) and (min-width: 768px) {
+@media screen and (max-width: 1268px) and (min-width: 768px) {
   .searching-results__elements {
     margin: 0 0 37px;
+    height: 420px;
     grid-template-columns: repeat(auto-fill, 224px);
     grid-row-gap: 8px;
     grid-column-gap: 8px;
