--- a/src/blocks/article-element/__loggedout/article-element__loggedout.css
+++ b/src/blocks/article-element/__loggedout/article-element__loggedout.css
@@ -12,3 +12,9 @@
 .article-element__loggedout:hover .article-element__attantion {
   display: flex;
 }
+
+@media screen and (max-width: 1268px) and (min-width: 768px) {
+  .article-element__loggedout {
+    margin: 8px;
+  }
+}
