--- a/src/blocks/about/__cover/about__cover.css
+++ b/src/blocks/about/__cover/about__cover.css
@@ -4,3 +4,10 @@
   margin: 0 auto;
   display: flex;
 }
+
+@media screen and (max-width: 1024px) and (min-width: 768px) {
+  .about__cover {
+    max-width: 688px;
+    padding: 61px 0;
+  }
+}
