--- a/src/blocks/about/__info/about__info.css
+++ b/src/blocks/about/__info/about__info.css
@@ -6,3 +6,9 @@
 .about__info :nth-child(3) {
   margin: 0;
 }
+
+@media screen and (max-width: 1024px) and (min-width: 768px) {
+  .about__info {
+    max-width: 424px;
+  }
+}
