--- a/src/blocks/about/__title/about__title.css
+++ b/src/blocks/about/__title/about__title.css
@@ -9,3 +9,11 @@
   line-height: 46px;
   color: #1A1B22;
 }
+
+@media screen and (max-width: 1024px) and (min-width: 768px) {
+  .about__title {
+    margin: 0 0 12px 0;
+    font-size: 30px;
+    line-height: 40px;
+  }
+}
