--- a/src/blocks/footer/__cover/footer__cover.css
+++ b/src/blocks/footer/__cover/footer__cover.css
@@ -5,3 +5,10 @@
   display: flex;
   justify-content: space-between;
 }
+
+@media screen and (max-width: 1024px) and (min-width: 768px) {
+  .footer__cover {
+    max-width: 688px;
+    padding: 20px 0;
+  }
+}
