--- a/src/blocks/footer/__sources/footer__sources.css
+++ b/src/blocks/footer/__sources/footer__sources.css
@@ -5,3 +5,9 @@
   width: 30%;
   justify-content: space-between;
 }
+
+@media screen and (max-width: 1024px) and (min-width: 768px) {
+  .footer__sources {
+    width: 46%;
+  }
+}
