--- a/src/blocks/saved-articles/__text/saved-articles__text.css
+++ b/src/blocks/saved-articles/__text/saved-articles__text.css
@@ -8,3 +8,9 @@
   line-height: 24px;
   color: #1A1B22;
 }
+
+@media screen and (max-width: 1268px) and (min-width: 768px) {
+  .saved-articles__text {
+    font-size: 14px;
+  }
+}
