--- a/src/blocks/saved-articles/__greeting/saved-articles__greeting.css
+++ b/src/blocks/saved-articles/__greeting/saved-articles__greeting.css
@@ -9,3 +9,12 @@
   line-height: 46px;
   color: #1A1B22;
 }
+
+@media screen and (max-width: 1268px) and (min-width: 768px) {
+  .saved-articles__greeting {
+    margin: 16px 0;
+    max-width: 336px;
+    font-size: 30px;
+    line-height: 34px;
+  }
+}
