--- a/src/blocks/saved-articles/__title/saved-articles__title.css
+++ b/src/blocks/saved-articles/__title/saved-articles__title.css
@@ -8,3 +8,9 @@
   line-height: 24px;
   color: rgba(26, 27, 34, 0.5);
 }
+
+@media screen and (max-width: 1268px) and (min-width: 768px) {
+  .saved-articles__title {
+    font-size: 14px;
+  }
+}
