--- a/src/blocks/article-element/__source/article-element__source.css
+++ b/src/blocks/article-element/__source/article-element__source.css
@@ -20,6 +20,6 @@
 
 @media screen and (max-width: 1268px) and (min-width: 768px) {
   .article-element__source {
-    margin: 0 0 16px 16px;
+    margin: 12px 0 16px 16px;
   }
 }
