--- a/src/blocks/article-list/article-list.css
+++ b/src/blocks/article-list/article-list.css
@@ -1,8 +1,14 @@
 @import url(./__item/article-list__item.css);
 
 .article-list {
-  margin: 0;
+  margin: 0 auto;
   padding: 60px 0;
   max-width: 100%;
   background-color: #F5F6F7;
+}
+
+@media screen and (max-width: 1024px) and (min-width: 768px) {
+  .article-list {
+    padding: 32px 0;
+  }
 }
