--- a/src/blocks/about/__image/about__image.css
+++ b/src/blocks/about/__image/about__image.css
@@ -13,3 +13,11 @@
     margin: 0 32px 0 0;
   }
 }
+
+@media screen and (max-width: 767px) and (min-width: 320px) {
+  .about__image {
+    width: 272px;
+    height: 272px;
+    margin: 0 0 24px;
+  }
+}
