--- a/src/blocks/about/__info/about__info.css
+++ b/src/blocks/about/__info/about__info.css
@@ -12,3 +12,9 @@
     max-width: 424px;
   }
 }
+
+@media screen and (max-width: 767px) and (min-width: 320px) {
+  .about__info {
+    max-width: 288px;
+  }
+}
