--- a/src/blocks/about/__title/about__title.css
+++ b/src/blocks/about/__title/about__title.css
@@ -17,3 +17,9 @@
     line-height: 40px;
   }
 }
+
+@media screen and (max-width: 767px) and (min-width: 320px) {
+  .about__title {
+    margin: 0 0 12px;
+  }
+}
