--- a/src/blocks/searching-results/__button/searching-results__button.css
+++ b/src/blocks/searching-results/__button/searching-results__button.css
@@ -33,3 +33,9 @@
     width: 240px;
   }
 }
+
+@media screen and (max-width: 767px) and (min-width: 320px) {
+  .searching-results__button {
+    width: 288px;
+  }
+}
