--- a/src/blocks/searching-results/__title/searching-results__title.css
+++ b/src/blocks/searching-results/__title/searching-results__title.css
@@ -16,3 +16,9 @@
     line-height: 34px;
   }
 }
+
+@media screen and (max-width: 767px) and (min-width: 320px) {
+  .searching-results__title {
+    margin: 0 0 24px;
+  }
+}
