--- a/src/blocks/article-element/__loggedin/article-element__loggedin.css
+++ b/src/blocks/article-element/__loggedin/article-element__loggedin.css
@@ -18,3 +18,9 @@
     margin: 8px;
   }
 }
+
+@media screen and (max-width: 767px) and (min-width: 320px) {
+  .article-element__loggedin {
+    margin: 16px;
+  }
+}
