--- a/src/blocks/article-element/__cover/article-element__cover.css
+++ b/src/blocks/article-element/__cover/article-element__cover.css
@@ -11,3 +11,10 @@
     height: 200px;
   }
 }
+
+@media screen and (max-width: 767px) and (min-width: 320px) {
+  .article-element__cover {
+    max-width: 256px;
+    height: 100%;
+  }
+}
