--- a/src/blocks/article-element/__date/article-element__date.css
+++ b/src/blocks/article-element/__date/article-element__date.css
@@ -10,3 +10,9 @@
   line-height: 24px;
   color: #B6BCBF;
 }
+
+@media screen and (max-width: 767px) and (min-width: 320px) {
+  .article-element__date {
+    margin: 0 0 8px;
+  }
+}
