--- a/src/blocks/article-element/__image/article-element__image.css
+++ b/src/blocks/article-element/__image/article-element__image.css
@@ -13,3 +13,11 @@
     margin-bottom: 12px;
   }
 }
+
+@media screen and (max-width: 767px) and (min-width: 320px) {
+  .article-element__image {
+    width: 288px;
+    height: 196px;
+    margin-bottom: 12px;
+  }
+}
