--- a/src/blocks/article-element/__title/article-element__title.css
+++ b/src/blocks/article-element/__title/article-element__title.css
@@ -21,3 +21,11 @@
     max-height: 72px;
   }
 }
+
+@media screen and (max-width: 767px) and (min-width: 320px) {
+  .article-element__title {
+    line-height: 28px;
+    max-height: 56px;
+    margin: 0 0 8px;
+  }
+}
