--- a/src/blocks/article-element/article-element.css
+++ b/src/blocks/article-element/article-element.css
@@ -28,3 +28,9 @@
     max-width: 224px;
   }
 }
+
+@media screen and (max-width: 767px) and (min-width: 320px) {
+  .article-element {
+    max-width: 288px;
+  }
+}
