--- a/src/blocks/searching-results/__elements/searching-results__elements.css
+++ b/src/blocks/searching-results/__elements/searching-results__elements.css
@@ -19,3 +19,15 @@
     grid-column-gap: 8px;
   }
 }
+
+@media screen and (max-width: 767px) and (min-width: 320px) {
+  .searching-results__elements {
+    margin: 0 0 15px;
+    height: 446px;
+    grid-template-columns: repeat(auto-fill, 288px);
+    grid-row-gap: 6px;
+    grid-column-gap: 0;
+    height: 100%;
+    overflow: visible;
+  }
+}
