--- a/src/blocks/footer/__author/footer__author.css
+++ b/src/blocks/footer/__author/footer__author.css
@@ -10,3 +10,9 @@
   line-height: 22px;
   color: #B6BCBF;
 }
+
+@media screen and (max-width: 767px) and (min-width: 320px) {
+  .footer__author {
+    font-size: 13px;
+  }
+}
