--- a/src/blocks/footer/__cover/footer__cover.css
+++ b/src/blocks/footer/__cover/footer__cover.css
@@ -12,3 +12,10 @@
     padding: 20px 0;
   }
 }
+
+@media screen and (max-width: 767px) and (min-width: 320px) {
+  .footer__cover {
+    max-width: 288px;
+    flex-direction: column-reverse;
+  }
+}
