--- a/src/blocks/footer/__links/footer__links.css
+++ b/src/blocks/footer/__links/footer__links.css
@@ -2,3 +2,9 @@
   margin: 0 15px 0 0;
   padding: 0;
 }
+
+@media screen and (max-width: 767px) and (min-width: 320px) {
+  .footer__links {
+    margin: 0 0 15px;
+  }
+}
