--- a/src/blocks/footer/__sources/footer__sources.css
+++ b/src/blocks/footer/__sources/footer__sources.css
@@ -11,3 +11,10 @@
     width: 46%;
   }
 }
+
+@media screen and (max-width: 767px) and (min-width: 320px) {
+  .footer__sources {
+    width: 100%;
+    margin-bottom: 36px;
+  }
+}
