--- a/src/blocks/searchform/__search/searchform__search.css
+++ b/src/blocks/searchform/__search/searchform__search.css
@@ -39,3 +39,12 @@
     width: 160px;
   }
 }
+
+@media screen and (max-width: 767px) and (min-width: 320px) {
+  .searchform__search {
+    position: absolute;
+    bottom: -130%;
+    right: 0;
+    width: 288px;
+  }
+}
