--- a/src/blocks/header/__text/header__text.css
+++ b/src/blocks/header/__text/header__text.css
@@ -8,3 +8,9 @@
   line-height: 24px;
   color: #FFF;
 }
+
+@media screen and (max-width: 767px) and (min-width: 320px) {
+  .header__text {
+    font-size: 16px;
+  }
+}
