--- a/src/blocks/header/header.css
+++ b/src/blocks/header/header.css
@@ -19,7 +19,10 @@
   .header {
     height: 66px;
   }
-  .header, .searchform {
-    background-size: 100% 400px;
+}
+
+@media screen and (max-width: 767px) and (min-width: 320px) {
+  .header {
+    height: 56px;
   }
 }
