--- a/src/blocks/searchform/__form/searchform__form.css
+++ b/src/blocks/searchform/__form/searchform__form.css
@@ -8,8 +8,9 @@
   border-radius: 100px;
 }
 
-@media screen and (max-width: 1024px) and (min-width: 768px) {
+@media screen and (max-width: 1024px) and (min-width: 320px) {
   .searchform__form {
     height: 56px;
+    margin-bottom: 104px;
   }
 }
