--- a/src/blocks/searchform/__info/searchform__info.css
+++ b/src/blocks/searchform/__info/searchform__info.css
@@ -10,3 +10,10 @@
     padding: 38px 0 48px;
   }
 }
+
+@media screen and (max-width: 767px) and (min-width: 320px) {
+  .searchform__info {
+    max-width: 89%;
+    padding: 30px 0;
+  }
+}
