--- a/src/blocks/searchform/__text/searchform__text.css
+++ b/src/blocks/searchform/__text/searchform__text.css
@@ -15,3 +15,9 @@
     margin: 0 0 48px 0;
   }
 }
+
+@media screen and (max-width: 767px) and (min-width: 320px) {
+  .searchform__text {
+    margin: 0 0 122px;
+  }
+}
