--- a/src/blocks/searchform/__title/searchform__title.css
+++ b/src/blocks/searchform/__title/searchform__title.css
@@ -11,8 +11,16 @@
 
 @media screen and (max-width: 1024px) and (min-width: 768px) {
   .searchform__title {
-    margin: 0 0 16px 0;
+    margin: 0 0 16px;
     max-width: 385px;
+    font-size: 36px;
+    line-height: 40px;
+  }
+}
+
+@media screen and (max-width: 767px) and (min-width: 320px) {
+  .searchform__title {
+    max-width: 288px;
     font-size: 36px;
     line-height: 40px;
   }
