--- a/src/blocks/searchform/__form/searchform__form.css
+++ b/src/blocks/searchform/__form/searchform__form.css
@@ -10,6 +10,8 @@
 
 @media screen and (max-width: 1024px) and (min-width: 320px) {
   .searchform__form {
+    max-width: 288px;
+    margin: 0 auto;
     height: 56px;
     margin-bottom: 104px;
   }
