--- a/src/blocks/searchform/__info/searchform__info.css
+++ b/src/blocks/searchform/__info/searchform__info.css
@@ -13,7 +13,7 @@
 
 @media screen and (max-width: 767px) and (min-width: 320px) {
   .searchform__info {
-    max-width: 89%;
+    max-width: 288px;
     padding: 30px 0;
   }
 }
