--- a/src/blocks/article-list/__item/article-list__item.css
+++ b/src/blocks/article-list/__item/article-list__item.css
@@ -16,3 +16,12 @@
     grid-column-gap: 8px;
   }
 }
+
+@media screen and (max-width: 767px) and (min-width: 320px) {
+  .article-list__item {
+    max-width: 288px;
+    grid-template-columns: repeat(auto-fill, 288px);
+    grid-row-gap: 6px;
+    grid-column-gap: 0;
+  }
+}
