--- a/src/blocks/article-list/article-list.css
+++ b/src/blocks/article-list/article-list.css
@@ -12,3 +12,9 @@
     padding: 32px 0;
   }
 }
+
+@media screen and (max-width: 767px) and (min-width: 320px) {
+  .article-list {
+    padding: 24px 0;
+  }
+}
