--- a/src/blocks/register-container/__button/register-container__button.css
+++ b/src/blocks/register-container/__button/register-container__button.css
@@ -27,3 +27,9 @@
 .register-container__button:active {
   background: #2A65CC;
 }
+
+@media screen and (max-width: 767px) and (min-width: 320px) {
+  .register-container__button {
+    width: 100%;
+  }
+}
