--- a/src/blocks/register-container/__close/register-container__close.css
+++ b/src/blocks/register-container/__close/register-container__close.css
@@ -19,3 +19,10 @@
   cursor: pointer;
   opacity: .6;
 }
+
+@media screen and (max-width: 767px) and (min-width: 320px) {
+  .register-container__close {
+    left: 85%;
+    top: -12%;
+  }
+}
