--- a/src/blocks/register-container/__info/register-container__info.css
+++ b/src/blocks/register-container/__info/register-container__info.css
@@ -6,3 +6,9 @@
   flex-direction: column;
   border: none;
 }
+
+@media screen and (max-width: 767px) and (min-width: 320px) {
+  .register-container__info {
+    width: 288px;
+  }
+}
