--- a/src/blocks/register-container/register-container.css
+++ b/src/blocks/register-container/register-container.css
@@ -19,3 +19,10 @@
   box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
   border-radius: 16px;
 }
+
+@media screen and (max-width: 767px) and (min-width: 320px) {
+  .register-container {
+    width: 100%;
+    box-shadow: none;
+  }
+}
