--- a/src/blocks/register/register.css
+++ b/src/blocks/register/register.css
@@ -13,3 +13,14 @@
   align-items: center;
 }
 
+@media screen and (max-width: 767px) and (min-width: 320px) {
+  .register {
+    top: 57px;
+    left: 0;
+    background-color: #FFF;
+    border-top-left-radius: 16px;
+    border-top-right-radius: 16px;
+    align-items: flex-start;
+  }
+}
+
