--- a/src/blocks/header/__mobile/header__mobile.css
+++ b/src/blocks/header/__mobile/header__mobile.css
@@ -1,6 +1,8 @@
 @media screen and (max-width: 767px) and (min-width: 320px) {
   .header__mobile {
+    width: 100%;
     display: flex;
     align-items: center;
+    justify-content: space-between;
   }
 }
