--- a/src/blocks/header/header.css
+++ b/src/blocks/header/header.css
@@ -7,6 +7,7 @@
 @import url(./__text/_theme-dark/header__text_theme-dark.css);
 @import url(./__main-background/_inactive/header__main-background_inactive.css);
 @import url(./__main-background/_mobile/header__main-background_mobile.css);
+@import url(./__button/_active/header__button_active.css);
 
 .header {
   max-width: 1440px;
