--- a/src/blocks/header/__button/header__button.css
+++ b/src/blocks/header/__button/header__button.css
@@ -5,7 +5,7 @@
   padding: 0;
   width: 16px;
   height: 2px;
-  background-color: #FFF;
+  background-color: transparent;
   border: none;
   outline: none;
   cursor: pointer;
@@ -16,7 +16,22 @@
   display: none;
   position: absolute;
   left: 0;
-  top: -5px;
+  top: -4px;
+  content: '';
+  margin: 0;
+  padding: 0;
+  width: 16px;
+  height: 2px;
+  background-color: #FFF;
+  border: none;
+  outline: none;
+}
+
+.header__button::after {
+  display: none;
+  position: absolute;
+  left: 0;
+  top: 3px;
   content: '';
   margin: 0;
   padding: 0;
@@ -37,6 +52,9 @@
     display: block;
   }
   .header__button::before {
+    display: block;
+  }
+  .header__button::after {
     display: block;
   }
 }
