--- a/src/blocks/header/__cover/header__cover.css
+++ b/src/blocks/header/__cover/header__cover.css
@@ -1,10 +1,15 @@
 .header__cover {
+  margin: 0;
+  padding: 0;
+
+  outline: none;
   background-color: transparent;
   width: 24px;
   height: 24px;
   display: flex;
   align-items: center;
   justify-content: center;
+  border: none;
   transition: all .2s ease;
 }
 
