--- a/src/blocks/header/__nav/header__nav.css
+++ b/src/blocks/header/__nav/header__nav.css
@@ -1,5 +1,11 @@
 @media screen and (max-width: 767px) and (min-width: 320px) {
   .header__nav {
-    display: none;
+    position: absolute;
+    z-index: 1;
+    bottom: -87%;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+    background: #1A1B22;
   }
 }
