--- a/src/blocks/header/__info/header__info.css
+++ b/src/blocks/header/__info/header__info.css
@@ -6,3 +6,9 @@
   align-items: center;
   justify-content: space-between;
 }
+
+@media screen and (max-width: 767px) and (min-width: 320px) {
+  .header__info {
+    flex-direction: column;
+  }
+}
