--- a/src/blocks/header/__mobile/header__mobile.css
+++ b/src/blocks/header/__mobile/header__mobile.css
@@ -1,8 +1,10 @@
 @media screen and (max-width: 767px) and (min-width: 320px) {
   .header__mobile {
     width: 100%;
+    height: 56px;
     display: flex;
     align-items: center;
     justify-content: space-between;
+
   }
 }
