--- a/src/blocks/header/__nav/header__nav.css
+++ b/src/blocks/header/__nav/header__nav.css
@@ -1,11 +1,13 @@
 @media screen and (max-width: 767px) and (min-width: 320px) {
   .header__nav {
     position: absolute;
-    z-index: 1;
-    bottom: -87%;
+    top: 100%;
     left: 0;
-    right: 0;
-    margin: 0 auto;
+    z-index: 1;
     background: #1A1B22;
+    width: 100%;
+    border-bottom-left-radius: 16px;
+    border-bottom-right-radius: 16px;
   }
 }
+
