--- a/src/blocks/header/__nav/header__nav.css
+++ b/src/blocks/header/__nav/header__nav.css
@@ -4,10 +4,12 @@
     top: 100%;
     left: 0;
     z-index: 1;
-    background: #1A1B22;
     width: 100%;
-    border-bottom-left-radius: 16px;
-    border-bottom-right-radius: 16px;
+    min-height: 100vh;
+    background-color: rgba(0, 0, 0, .5);
+    /* visibility: hidden; */
+    /* opacity: 0; */
+    transition: .3s opacity, .3s visibility;
   }
 }
 
