--- a/src/blocks/header/__mobile/header__mobile.css
+++ b/src/blocks/header/__mobile/header__mobile.css
@@ -1,3 +1,9 @@
+.header__mobile {
+  margin: 0;
+  padding: 0;
+  align-self: flex-end;
+}
+
 @media screen and (max-width: 767px) and (min-width: 320px) {
   .header__mobile {
     width: 100%;
