--- a/src/blocks/navigation/__links/_loggedout/navigation__links_loggedout.css
+++ b/src/blocks/navigation/__links/_loggedout/navigation__links_loggedout.css
@@ -19,3 +19,14 @@
     padding: 8px;
   }
 }
+
+@media screen and (max-width: 767px) and (min-width: 320px) {
+  .navigation__links_loggedout {
+    max-width: 288px;
+    margin-bottom: 22px;
+    height: 56px;
+    display: flex;
+    align-items: center;
+    text-align: center;
+  }
+}
