--- a/src/blocks/navigation/__links/navigation__links.css
+++ b/src/blocks/navigation/__links/navigation__links.css
@@ -12,3 +12,9 @@
     margin: 0 15px 0 0;
   }
 }
+
+@media screen and (max-width: 767px) and (min-width: 320px) {
+  .navigation__links {
+    margin: 16px 0 16px 16px;
+  }
+}
