--- a/src/blocks/header/__info/header__info.css
+++ b/src/blocks/header/__info/header__info.css
@@ -9,6 +9,7 @@
 
 @media screen and (max-width: 767px) and (min-width: 320px) {
   .header__info {
+    max-width: 288px;
     flex-direction: column;
   }
 }
