--- a/src/blocks/navigation/navigation.css
+++ b/src/blocks/navigation/navigation.css
@@ -22,9 +22,9 @@
   margin: 0;
 } */
 
-.navigation :nth-child(2n) {
+/* .navigation :nth-child(2n) {
   display: none;
-}
+} */
 
 @media screen and (max-width: 767px) and (min-width: 320px) {
   .navigation {
