--- a/src/blocks/navigation/__links/navigation__links.css
+++ b/src/blocks/navigation/__links/navigation__links.css
@@ -5,16 +5,26 @@
   align-items: center;
   text-align: center;
   position: relative;
+
+  text-decoration: none;
+  font-family: "Roboto", Arial, sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 24px;
+  color: #FFFFFF;
 }
 
 @media screen and (max-width: 1024px) and (min-width: 768px) {
   .navigation__links {
     margin: 0 15px 0 0;
+    font-size: 16px;
   }
 }
 
 @media screen and (max-width: 767px) and (min-width: 320px) {
   .navigation__links {
     margin: 16px 0 16px 16px;
+    font-size: 16px;
   }
 }
