--- a/src/blocks/navigation/__links/navigation__links.css
+++ b/src/blocks/navigation/__links/navigation__links.css
@@ -13,6 +13,12 @@
   font-size: 18px;
   line-height: 24px;
   color: #FFFFFF;
+  transition: all .2s ease;
+}
+
+.navigation__links:hover {
+  cursor: pointer;
+  opacity: .9;
 }
 
 @media screen and (max-width: 1024px) and (min-width: 768px) {
