update navigation style

--- a/src/blocks/navigation/__links/_hover/navigation__links_hover.css
+++ b/src/blocks/navigation/__links/_hover/navigation__links_hover.css
@@ -10,3 +10,9 @@
   transform: translateY(13px);
   box-sizing: border-box;
 }
+
+@media screen and (max-width: 767px) and (min-width: 320px) {
+  .navigation__links_hover::after {
+    display: none;
+  }
+}
