--- a/src/blocks/header/__main-background/_mobile/header__main-background_mobile.css
+++ b/src/blocks/header/__main-background/_mobile/header__main-background_mobile.css
@@ -1,3 +1,5 @@
-.header__main-background_mobile {
-  background: #1A1B22;
+@media screen and (max-width: 767px) and (min-width: 320px) {
+  .header__main-background_mobile {
+    background: #1A1B22;
+  }
 }
