--- a/src/blocks/register-container/__link/register-container__link.css
+++ b/src/blocks/register-container/__link/register-container__link.css
@@ -2,6 +2,8 @@
   margin: 0;
   padding: 0;
   text-decoration: none;
+  background-color: transparent;
+  border: none;
   font-family: "Inter", Arial, sans-serif;
   font-style: normal;
   font-weight: normal;
