--- a/src/blocks/searchform/__form/searchform__form.css
+++ b/src/blocks/searchform/__form/searchform__form.css
@@ -10,9 +10,16 @@
 
 @media screen and (max-width: 1024px) and (min-width: 320px) {
   .searchform__form {
-    max-width: 288px;
+    max-width: 448px;
     margin: 0 auto;
     height: 56px;
+
+  }
+}
+
+@media screen and (max-width: 767px) and (min-width: 320px) {
+  .searchform__form {
+    max-width: 288px;
     margin-bottom: 104px;
   }
 }
