inactive serching-results

--- a/src/blocks/searching-results/searching-results.css
+++ b/src/blocks/searching-results/searching-results.css
@@ -1,6 +1,7 @@
 @import url(./__title/searching-results__title.css);
 @import url(./__elements/searching-results__elements.css);
 @import url(./__button/searching-results__button.css);
+@import url(./_inactive/searching-results_inactive.css);
 
 .searching-results {
   padding: 80px 0;
