--- a/src/blocks/preloader/preloader.css
+++ b/src/blocks/preloader/preloader.css
@@ -1,4 +1,4 @@
-@import url(./__notfound/preloader__notfound.css);
+/* @import url(./__notfound/preloader__notfound.css); */
 @import url(./__circle/preloader__circle.css);
 @import url(./__title/preloader__title.css);
 @import url(./__image/preloader__image.css);
@@ -8,6 +8,6 @@
 .preloader {
   margin: 0 auto;
   padding: 80px 0;
-  width: 1440px;
+  max-width: 1440px;
   max-height: 282px;
 }
