active error style

--- a/src/blocks/register-container/register-container.css
+++ b/src/blocks/register-container/register-container.css
@@ -10,6 +10,7 @@
 @import url(./__link/register-container__link.css);
 @import url(./__close/register-container__close.css);
 @import url(./__name/_inactive/register-container__name_inactive.css);
+@import url(./__input/_active/register-container__input_active.css);
 
 .register-container {
   width: 430px;
