add error styles to form

--- a/src/blocks/register-container/__input/_active/register-container__input_active.css
+++ b/src/blocks/register-container/__input/_active/register-container__input_active.css
@@ -1,4 +1,4 @@
 .register-container__input_active {
-  border-bottom: 1px solid red;
+  border-bottom: 1px solid #CD5C5C;
   transition: border-bottom .2s ease;
 }
