--- a/src/blocks/register-container/__input-error/register-container__input-error.css
+++ b/src/blocks/register-container/__input-error/register-container__input-error.css
@@ -8,6 +8,6 @@
   font-size: 12px;
   line-height: 15px;
   visibility: hidden;
-  color: #FF0000;
+  color: #CD5C5C;
   transition: visibility .3s ease;
 }
