--- a/src/blocks/register-container/register-container.css
+++ b/src/blocks/register-container/register-container.css
@@ -12,6 +12,7 @@
 @import url(./__name/_inactive/register-container__name_inactive.css);
 @import url(./__input/_active/register-container__input_active.css);
 @import url(./__button/_inactive/register-container__button_inactive.css);
+@import url(./__link/_success-reg/register-container__link_success-reg.css);
 
 .register-container {
   width: 430px;
