--- a/src/blocks/navigation/__link/navigation__link.css
+++ b/src/blocks/navigation/__link/navigation__link.css
@@ -10,6 +10,9 @@
   font-size: 18px;
   line-height: 24px;
   color: #FFFFFF;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 @media screen and (max-width: 1024px) and (min-width: 768px) {
