--- a/src/blocks/navigation/__link/navigation__link.css
+++ b/src/blocks/navigation/__link/navigation__link.css
@@ -13,6 +13,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  cursor: pointer;
+  outline: none;
 }
 
 @media screen and (max-width: 1024px) and (min-width: 768px) {
